--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@
 /Scrapy/demo4_crawlSpider/demo4_crawlSpider/__pycache__/*.pyc
 /Scrapy/demo4_crawlSpider/demo4_crawlSpider/spiders/__pycache__/*.pyc
 /*.pyc
+/mzitu/images
+/mzitu/__pycache__
+/__pycache__
+/Scrapy/demo/demo/__pycache__/*.pyc
+/Scrapy/demo/demo/spiders/__pycache__/*.pyc
+/common/__pycache__/*.pyc
